refactor: clean up around solver config